overflow-y problem solved

--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -3,6 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
+  overflow-x: hidden;
 }
 
 *,
@@ -23,6 +24,7 @@ body {
   font-family: u.$font-josefin;
   font-size: 0.9375rem;
   font-weight: 300;
+  position: relative;
   overflow-x: hidden;
 }
 
