--- a/scss/overlay/_hamMenu.scss
+++ b/scss/overlay/_hamMenu.scss
@@ -7,7 +7,6 @@
     position: absolute;
     z-index: 1;
     width: 100vw;
-    width: 100%;
     height: 100vh;
     right: 0;
     top: 0;
@@ -82,5 +81,5 @@
 }
 
 .noScroll {
-  overflow: hidden;
+  overflow-y: hidden;
 }
